fix: change z-index for line

--- a/src/components/ProcurementRegister/Filters/Filters.module.scss
+++ b/src/components/ProcurementRegister/Filters/Filters.module.scss
@@ -53,7 +53,7 @@
       content: "";
       width: 100%;
       position: absolute;
-      z-index: 150;
+      z-index: 1;
       border-bottom: 1px solid rgba(95, 91, 91, 0.3);
       bottom: 0;
       right: 0;
